--- a/donate.html
+++ b/donate.html
@@ -42,6 +42,10 @@
   cursor: auto;
 }
 
+.button:focus {
+  outline: none;
+}
+
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
