oops missing </div>

--- a/user_form.html
+++ b/user_form.html
@@ -89,7 +89,7 @@
 <option value="23">Türkçe</option>
 <option value="26">Українська</option>
 </select></div>
-
+</div>
 <style type="text/css">
 #id_lang_box{
    border: none;
