fix: set window scroll position, attempt #1

--- a/donate.html
+++ b/donate.html
@@ -1002,7 +1002,9 @@
 
         //Gets top of three step box
         var top_of_three_step_box = $('.ak-field-box.ak-donate-three-step').offset().top;
-        console.log(top_of_three_step_box);
+        console.log('top of three step box: ', top_of_three_step_box);
+
+        $(window).scrollTop(top_of_three_step_box);
 
         var current_step = $('input[name="ak-donate-step"]:checked').val();
         if ( current_step != "2" && current_step != "3" ) {
