--- a/user_form.html
+++ b/user_form.html
@@ -74,33 +74,24 @@
 {% endif %}
 
 {% if page.custom_fields.form_show_language_field == "y" %}
-<div class="text-small">LANGUAGE</div>
-<div id="id_lang_box" class="input-select ak-input-type-user">
-	<select name="lang" id="lang">
-	<option value=""></option>
-	<option value="1">English</option>
-	<option value="24">Bahasa Indonesia</option>
-	<option value="8">Deutsch</option>
-	<option value="3">Español</option>
-	<option value="6">Français</option>
-	<option value="14">Nederlands</option>
-	<option value="2">Português</option>
-	<option value="7">日本語</option>
-	<option value="23">Türkçe</option>
-	<option value="26">Українська</option>
-	</select>
-</div>
-<style type="text/css">
-#id_lang_box{
-   border: none;
-   background: transparent;
-   margin: 0;
-}
 
-#lang{
-padding-top: 15px;
-}
-</style>
+	<div id="id_language_box" class="input-select ak-input-type-user">
+		<label for="id_language">{% filter ak_text:"field_lang"%}Language{% endfilter %}</label>
+			<select name="lang" id="lang">
+			<option value=""></option>
+			<option value="1">English</option>
+			<option value="24">Bahasa Indonesia</option>
+			<option value="8">Deutsch</option>
+			<option value="3">Español</option>
+			<option value="6">Français</option>
+			<option value="14">Nederlands</option>
+			<option value="2">Português</option>
+			<option value="7">日本語</option>
+			<option value="23">Türkçe</option>
+			<option value="26">Українська</option>
+			</select>
+		</div>
+		
 {% endif %}
 
 
