fix: testing hypothesis

--- a/donate.html
+++ b/donate.html
@@ -1130,8 +1130,8 @@
         validate_step(current_step);
 
         if (!step_has_errors) {
-          show_tick(current_step);
-          change_step_one_label(current_step);
+          // show_tick(current_step);
+          // change_step_one_label(current_step);
           // check radio button in next step
           $('input[name="ak-donate-step"]:checked')
             .closest('label')
