Testing commented out code

--- a/donate.html
+++ b/donate.html
@@ -999,9 +999,12 @@
 
     function scroll_to_top_of_box() {
       //Gets top of three step box
+      console.log("Scroll to top of box is called")
+      /*
       var top_of_three_step_box = $('.ak-field-box.ak-donate-three-step').offset().top;
       console.log('top of three step box: ', top_of_three_step_box);
       $('html,body').animate({scrollTop: top_of_three_step_box}, 'fast' );
+      */
     }
 
     var three_step_initialized = 0;
