--- a/wrapper.html
+++ b/wrapper.html
@@ -54,7 +54,7 @@
 	<!-- End Google Tag Manager -->
 
 
-	{% if event.custom_fields.url and re.search(r"attend\/\d+(\/attend/)?",request.path) %}
+	{% if event.custom_fields.url and re.search(r"attend",request.path) %}
 	<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />
 	<style>
 		#redirect-overlay {
