--- a/wrapper.html
+++ b/wrapper.html
@@ -49,7 +49,7 @@
 	<!-- End Google Tag Manager -->
 
 
-	{% if event.custom_fields.url and event.id in request.path %}
+	{% if event.custom_fields.url and 'attend/'|add:event.id|slugify in request.path %}
 	<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />
 	<style>
 		#redirect-overlay {
