fix: use page type to handle redirect, attempt #1

--- a/wrapper.html
+++ b/wrapper.html
@@ -36,20 +36,25 @@
 
 	<!-- Google Tag Manager -->
 	<script>
-		(function (w, d, s, l, i) w[l] = w[l] || []; w[l].push({
+		(function (w, d, s, l, i) {
+			w[l] = w[l] || [];
+			w[l].push({
 				'gtm.start': new Date().getTime(),
 				event: 'gtm.js'
 			});
 			var f = d.getElementsByTagName(s)[0],
 				j = d.createElement(s),
-				dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-			'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+				dl = l != 'dataLayer' ? '&l=' + l : '';
+			j.async = true;
+			j.src =
+				'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+			f.parentNode.insertBefore(j, f);
 		})(window, document, 'script', 'dataLayer', 'GTM-MNNGDHL');
 	</script>
 	<!-- End Google Tag Manager -->
 
 
-	{% if event.custom_fields.url and 'attend/' in request.path %}
+	{% if event.custom_fields.url and page.type == 'EventSignup' %}
 	<meta http-equiv="refresh" content="0;url={{ event.custom_fields.url }}" />
 	<style>
 		#redirect-overlay {
