--- a/user_update.html
+++ b/user_update.html
@@ -23,7 +23,7 @@
 
 		<form name="accountupdate" method="POST" class="ak-form user-update">
 			<div id="form" class="user-update">
-				{{ form.as_p }}
+				{% for field in form.visible_fields %}
 				<input type="submit" class="submit" value="Update My Info" />
 			</div>
 		</form>
