Revert "fix: privacy bug in user update form, attempt #2"
This reverts commit 143a4f8c91bbbd24da3cb32e8f1c0e958b2e786e.

--- a/user_update.html
+++ b/user_update.html
@@ -23,7 +23,7 @@
 
 		<form name="accountupdate" method="POST" class="ak-form user-update">
 			<div id="form" class="user-update">
-				{% for field in form.visible_fields %}
+				{{ form.as_p }}
 				<input type="submit" class="submit" value="Update My Info" />
 			</div>
 		</form>
