--- a/user_update.html
+++ b/user_update.html
@@ -1,5 +1,6 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
+{% load actionkit_tags switchcase %}
 
 {% block content %}
 <style>
@@ -23,7 +24,36 @@
 
 		<form name="accountupdate" method="POST" class="ak-form user-update">
 			<div id="form" class="user-update">
-				{{ form.as_p }}
+				{% for field in form.visible_fields %}
+				<div class="ak-labels-before" style="margin-bottom: 0.8em;">
+					<label for="{{ field.id_for_label }}">
+						{{ field.label }}
+					</label>
+
+					{% switch field.name %}
+					{% case 'country' %}
+					<select name="{{ input_name_prefix }}country" id="id_{{ input_name_prefix }}country"
+						{% if onchange %}onchange="{{ onchange }}" onblur="{{ onchange }}" {% endif %}>
+						<option selected="{{ field.value }}">{{ field.value }}</option>
+						{% for std_name,name in templateset.lang.country_names_us_first %}
+						<option value="{{ std_name|escapeall }}">{{ name|escapeall }}</option>
+						{% endfor %}
+					</select>
+					{% case 'state' %}
+					<script>
+						$(function () { //Make sure the current State value is selected
+							let selectedState = "{{ field.value }}";
+							$('#id_state > option[value=' + selectedState + ']').prop('selected', true);
+						})
+					</script>
+					{% include "./state_select.html" %}
+
+					{% else %}
+					{{ field }}
+					{% endswitch %}
+					{{ field.errors }}
+				</div>
+				{% endfor %}
 				<input type="submit" class="submit" value="Update My Info" />
 			</div>
 		</form>
