fix: add AK signups to attendee after-signup page

--- a/wrapper.html
+++ b/wrapper.html
@@ -5,7 +5,7 @@
 
 <head>
 
-	<!-- Gogle Optimise Anti-flicker snippet -->
+	<!-- Google Optimise Anti-flicker snippet -->
 	<script>
 		dataLayer = [];
 	</script>
